# bobiversestmap

./: .gitignore  Pipfile  README.md  app.py  characters.py  data.json  data1.json  data2.json  data3.json  entry.py  freeze.py  genealogy.py  index.html  locations.py  manage.py  nl.py  prepare_data.py  pyproject.toml  read_dates.py  read_timeline.py  read_travels.py  readcombined.py  relationships.py  requirements.txt  scenes.py  scenes_locations.py  script.py  stars.py  timeline.html  utils.py  write_data.json.py  write_data_json.py
app/: package-lock.json  package.json  vue.config.js
app/public/: index.html
css/: bob_styles.css
docs/: bob_characters.json  characters.json  cooccurences.json  cooccurrences.html  data.json  genealogy.html  genealogy.json  index.html  locations.json  narrative_chart.html  timeline  timeline.html  timeline_blocks.html  timeline_blocks.json  travels.csv  travels.json
generator/: book_chapters.py  books.py  chapter_characters.py  chapter_locations.py  chapters_locations.py  character_lines.py  characters.py  common.py  data.py  dates.py  links.py  locations.py  nl.py  presences.py  read_travels.py  scenes.py  scenes_locations.py  stars.py  thresholds.py  timeline.py  travels.py  travels_out.py  utils.py
js/: chart.js
public_data/: genealogy.txt  locations.txt  nonbob_characters.json  stars.csv  thresholds_deaths.txt  thresholds_first.txt  thresholds_last.txt  timeline_books_1-3.txt
templates/: cooccurrences.html  genealogy.html  index.html  narrative.html  narrative_chart.html  timeline.html  timeline_blocks.html
(+49 files in other folders)
